Issue #SB-26297 fix: BMC is not aligned properly under digital textbook section for content creator

--- a/src/app/client/src/app/modules/shared-feature/components/collection-player/collection-player.component.scss
+++ b/src/app/client/src/app/modules/shared-feature/components/collection-player/collection-player.component.scss
@@ -28,6 +28,7 @@
         background-color: var(--gray-800);
         display: inline-block;
         margin: 0px 0.5rem;
+        vertical-align: middle;
     }
   
   @include respond-below(sm) {
